# ultra96v2_4z

./: CMakeLists.txt  README.md
scripts/: set_property.tcl  ultra96v2_4z.tcl
src/: ultra96v2_4z_wrapper.v
